[package]
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
name = "sulfur"
version = "0.1.0"
description = "A webdriver client for Rust."
license = "Apache-2.0"
repository = "https://github.com/cstorey/rustbucks"
categories = []
documentation = "https://docs.rs/sulfur"

[dependencies]
env_logger = "0.5.13"
failure = "0.1.3"
failure_derive = "0.1.3"
lazy_static = "1.2.0"
log = "0.4.6"
reqwest = "0.9.4"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
url = "1.7.2"

[dev-dependencies]
futures = "0.1.25"
hyper = "0.12.13"
tokio = "0.1.11"
warp = "0.1.9"
