[package]
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
categories = []
description = "A webdriver client for Rust."
documentation = "https://docs.rs/sulfur"
license = "Apache-2.0"
name = "sulfur"
repository = "https://github.com/cstorey/sulfur"
version = "0.1.0"
[dependencies]
failure = "0.1.3"
failure_derive = "0.1.3"
log = "0.4.6"
rand = "0.7.0"
reqwest = "0.9.4"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
url = "1.7.2"

[dev-dependencies]
env_logger = "0.6.1"
futures = "0.1.25"
hyper = "0.12.13"
lazy_static = "1.2.0"
tokio = "0.1.11"
warp = "0.1.9"
