[package]
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
categories = []
description = "A webdriver client for Rust."
documentation = "https://docs.rs/sulfur"
license = "Apache-2.0"
name = "sulfur"
repository = "https://github.com/cstorey/sulfur"
version = "0.1.0"
[dependencies]
failure = "0.1.3"
log = "0.4.6"
rand = "0.7.0"
reqwest = "0.9.4"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
url = "2.0.0"
percent-encoding = "2.0.0"
base64 = "0.11.0"

[dev-dependencies]
env_logger = "0.7.0"
futures = "0.3.0"
lazy_static = "1.2.0"
tokio = "0.1.11"
hyper = "0.12.35"
hyper-staticfile = "0.4.1"
tempfile = "3.1.0"
